#=======================================================================================================================
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
#=======================================================================================================================
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_STANDARD 23)
#=======================================================================================================================
cmake_minimum_required(VERSION 3.30)
#=======================================================================================================================
         project(tic-tac-toe)
#=======================================================================================================================
add_subdirectory(libraries)
#=======================================================================================================================
add_subdirectory(code)
#=======================================================================================================================