#=======================================================================================================================
cmake_minimum_required(VERSION 3.30)
#=======================================================================================================================
         project(tic-tac-toe)
#=======================================================================================================================
add_subdirectory(libraries)
#=======================================================================================================================
add_subdirectory(code)
#=======================================================================================================================