#=======================================================================================================================
       cmake_minimum_required(VERSION 3.30)
#=======================================================================================================================
         project(tic-tac-toe VERSION 0.0.1)
#=======================================================================================================================
add_subdirectory(libraries)
#=======================================================================================================================
add_subdirectory(modules)
#=======================================================================================================================
add_subdirectory(code)
#=======================================================================================================================