#=======================================================================================================================
add_subdirectory(common)
#=======================================================================================================================
add_subdirectory(graphics)
#=======================================================================================================================
add_subdirectory(platforms)
#=======================================================================================================================
add_subdirectory(resources)
#=======================================================================================================================
add_subdirectory(shaders)
#=======================================================================================================================