#=======================================================================================================================
         project(game LANGUAGES CXX)
#=======================================================================================================================
  add_executable(game)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================